@@ -2,6 +2,18 @@
 
         Reviewed by Eric Seidel.
 
+        [bzt] CC webkit-bot-watchers whenever the bots touch bugs
+        https://bugs.webkit.org/show_bug.cgi?id=31952
+
+        The mailing list is open for anyone to subscribe.
+
+        * Scripts/modules/bugzilla.py:
+        * Scripts/modules/commands/queues.py:
+
+2009-11-28  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         [bzt] style-queue should report style errors to bugzilla
         https://bugs.webkit.org/show_bug.cgi?id=31945
 
